# RPi4-EVL-4xSPI

./: .gitignore  0001-spidev-x4-rpi4b.patch  LICENSE  README.md  encoder.service  encoder_visualizer.py  evl_arm_defconfig  oob-spi-v2.c  prepare.sh  update-client.sh
board/: README.md  board.dch  board.dip
board/components/: 1-2199298-2.eli  RASPBERRY_PI_B_.eli  TBL004-508-02GY-2WT.eli  TBL004-508-06GY-2WT.eli
board/gerber/: 1 - Top.gbr  2 - Bottom.gbr  BoardOutline.gbr  BottomAssembly.gbr  BottomDimension.gbr  BottomMask.gbr  BottomPaste.gbr  BottomSilk.gbr  Through.drl  TopAssembly.gbr  TopDimension.gbr  TopMask.gbr  TopPaste.gbr  TopSilk.gbr
board/step/: 1-2199298-2.stp  2x20 Male Pin Header.STEP  CUI_DEVICES_TBL004-508-02GY-2WT.step  CUI_DEVICES_TBL004-508-06GY-2WT.step
client/: .gitignore  CMakeLists.txt
client/include/: color.h  helpers.h  main.h
client/src/: helpers.c  main.c
server/: CMakeLists.txt
server/include/: control.h  daq.h  encoder.h  main.h  server.h
server/src/: control.c  daq.c  encoder.c  main.c  server.c
